[package]
name = "gemfed"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
atom_syndication = "0.12.2"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
gemini-feed = "0.1.0"
germ = "0.3"
once_cell = "1.19.0"
regex = "1.10.3"
tokio = {version = "1.36", features = [ "full" ] }
url = "2.5.0"
writefreely_client = "0.2.0"
